Tratamento de erros básicos

--- a/Trilha_Python_Data_Science/python_data_science_02.ipynb
+++ b/Trilha_Python_Data_Science/python_data_science_02.ipynb
@@ -2683,7 +2683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "metadata": {
         "id": "PkMmeYxaDcIF"
       },
@@ -2695,12 +2695,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 88,
       "metadata": {
         "id": "AudrLS-BGGEy"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'KeyError'> Estudante não matriculado na turma: 'Paara'\n"
+          ]
+        }
+      ],
+      "source": [
+        "try:\n",
+        "    nome = input(\"Digite o nome do estudante(a): \")\n",
+        "    resultado = notas[nome]\n",
+        "    resultado\n",
+        "except Exception as e:\n",
+        "    print(type(e), f\"Estudante não matriculado na turma: {e}\")\n",
+        "    pass "
+      ]
     },
     {
       "cell_type": "code",
@@ -2708,17 +2724,23 @@
       "metadata": {
         "id": "NEX6RRX7Wb0Y"
       },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "3oV8Bw-NGGiu"
-      },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Estudante não matriculado na turma:  Paara\n"
+          ]
+        }
+      ],
+      "source": [
+        "try:\n",
+        "    nome = input(\"Digite o nome do estudante(a): \")\n",
+        "    resultado = notas[nome]\n",
+        "    resultado\n",
+        "except KeyError:\n",
+        "    print(f\"Estudante não matriculado na turma:\", nome)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2769,12 +2791,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 92,
       "metadata": {
         "id": "NS4vABJPDcFN"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[3.0, 4.0, 6.0]\n"
+          ]
+        }
+      ],
+      "source": [
+        "try:\n",
+        "    nome = input(\"Digite o nome do estudante(a): \")\n",
+        "    resultado = notas[nome]\n",
+        "    resultado\n",
+        "except KeyError:\n",
+        "    print(f\"Estudante não matriculado na turma:\", nome)\n",
+        "else:\n",
+        "    print(resultado)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2827,12 +2866,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 95,
       "metadata": {
         "id": "U8QCogXhBi8C"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Estudante não matriculado na turma: Paara\n",
+            "A consulta foi encerrada\n"
+          ]
+        }
+      ],
+      "source": [
+        "try:\n",
+        "    nome = input(\"Digite o nome do estudante(a): \")\n",
+        "    resultado = notas[nome]\n",
+        "    resultado\n",
+        "except KeyError:\n",
+        "    print(f\"Estudante não matriculado na turma:\", nome)\n",
+        "else:\n",
+        "    print(resultado)\n",
+        "finally:\n",
+        "    print(\"A consulta foi encerrada\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2879,7 +2938,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 100,
       "metadata": {
         "id": "Hf7MQtMjSXS-"
       },
@@ -2893,58 +2952,94 @@
         "  return = calculo: float\n",
         "    Média calculada\n",
         "  '''\n",
-        "\n",
         "  calculo = sum(lista) / len(lista)\n",
-        "\n",
-        "  ...\n",
+        "  if len(lista) > 4:\n",
+        "    raise ValueError(\"A lista não pode possuir mais de 4 notas\")\n",
         "\n",
         "  return calculo"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 98,
       "metadata": {
         "id": "gnlcrP93k8f2"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "ename": "ValueError",
+          "evalue": "A lista não pode possuir mais de 4 notas",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[98], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m notas \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m6\u001b[39m, \u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m8\u001b[39m, \u001b[38;5;241m8\u001b[39m, \u001b[38;5;241m9\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m calculo_media \u001b[38;5;241m=\u001b[39m \u001b[43mmedia\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnotas\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m calculo_media\n",
+            "Cell \u001b[1;32mIn[96], line 12\u001b[0m, in \u001b[0;36mmedia\u001b[1;34m(lista)\u001b[0m\n\u001b[0;32m     10\u001b[0m calculo \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(lista) \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(lista)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(lista) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m4\u001b[39m:\n\u001b[1;32m---> 12\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mA lista não pode possuir mais de 4 notas\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m calculo\n",
+            "\u001b[1;31mValueError\u001b[0m: A lista não pode possuir mais de 4 notas"
+          ]
+        }
+      ],
+      "source": [
+        "notas = [6, 7, 8, 8, 9]\n",
+        "calculo_media = media(notas)\n",
+        "calculo_media"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 99,
       "metadata": {
         "id": "IprXe3qalX5J"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[99], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m notas \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m6\u001b[39m, \u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m8\u001b[39m, \u001b[38;5;241m8\u001b[39m, \u001b[38;5;241m9\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m8\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m calculo_media \u001b[38;5;241m=\u001b[39m \u001b[43mmedia\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnotas\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m calculo_media\n",
+            "Cell \u001b[1;32mIn[96], line 10\u001b[0m, in \u001b[0;36mmedia\u001b[1;34m(lista)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mmedia\u001b[39m(lista: \u001b[38;5;28mlist\u001b[39m\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m0\u001b[39m]) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mfloat\u001b[39m:\n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m  \u001b[39m\u001b[38;5;124;03m''' Função para calcular a média de notas passadas por uma lista\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;03m  lista: list, default [0]\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;124;03m    Média calculada\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;124;03m  '''\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m   calculo \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mlista\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(lista)\n\u001b[0;32m     11\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(lista) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m4\u001b[39m:\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mA lista não pode possuir mais de 4 notas\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+            "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+          ]
+        }
+      ],
+      "source": [
+        "notas = [6, 7, 8, 8, 9, \"8\"]\n",
+        "calculo_media = media(notas)\n",
+        "calculo_media"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 103,
       "metadata": {
         "id": "lO8OCMRzSXQv"
       },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "A-rA3l4hm4RA"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Jf3Sg5H-m4Za"
-      },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "7.5\n",
+            "A consulta foi encerrada\n"
+          ]
+        }
+      ],
+      "source": [
+        "try:\n",
+        "    notas = [6, 7, 8, 9]\n",
+        "    calculo_media = media(notas)\n",
+        "except TypeError:\n",
+        "    print(\"O valor inserido deve ser numérico\")\n",
+        "except ValueError as e:\n",
+        "    print(e)\n",
+        "else:\n",
+        "    print(calculo_media)\n",
+        "finally:\n",
+        "    print(\"A consulta foi encerrada\")"
+      ]
     }
   ],
   "metadata": {
